Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/Candidate_Portal_Welcome_Carousel__mdt.object-meta.xml
<CustomObject>
    <description>Store details of candidate portal welcome carousel page information</description>
    <label>Candidate Portal Carousel</label>
    <pluralLabel>Candidate Portal Carousel</pluralLabel>
</CustomObject>