Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/altText__c.field-meta.xml
<CustomField>
    <fullName>altText__c</fullName>
    <description>Display text in the event of broken slide image</description>
    <inlineHelpText>Display text in the event of broken slide image</inlineHelpText>
    <label>altText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>