Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/Headers__c.field-meta.xml
<CustomField>
    <fullName>Headers__c</fullName>
    <description>Header text on a slide</description>
    <inlineHelpText>Header text on a slide</inlineHelpText>
    <label>Headers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>