Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/Hyperlink_URL__c.field-meta.xml
<CustomField>
    <fullName>Hyperlink_URL__c</fullName>
    <label>Hyperlink URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>