Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image_URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>