Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <description>URL of images displayed on each Carousel page</description>
    <inlineHelpText>URL of images displayed on each Carousel page</inlineHelpText>
    <label>ImageURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>