Frankbelford/uatv1ba/force-app/main/default/objects/Candidate_Portal_Welcome_Carousel__mdt/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <description>Carousel page number</description>
    <label>Page Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>